--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx testcafe chrome:headless spec/test.search.js"
+    "test": "npx testcafe chrome:headless spec/test.search.js --reporter spec,xunit:report.xml"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ghoshasish99/TestCafe#readme",
   "devDependencies": {
-    "testcafe": "^1.10.1"
+    "testcafe": "^1.10.1",
+    "testcafe-reporter-xunit": "^2.1.0"
   }
 }
