--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
   inputs:
     testResultsFormat: 'JUnit'
     testResultsFiles: '**/report.xml'
-    testRunTitle: 'Test Cafe Execution Report'
+    testRunTitle: 'Testcafe Execution Report'
